--- a/paginas/contacto.html
+++ b/paginas/contacto.html
@@ -5,20 +5,33 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+  <!-- METAINFORMACION (SEO) -->
   <meta name="description" content="En esta sección te podras comunicar con nosotros y realizar las consultas que necesites,sacarte dudas e informarte con mas profundidad sobre el servicio que desees tomar,rápidamente estaremos contestandote por mail o si es necesario via whatsapp">
+
   <meta name="keywords"  content="CONTACTO,NOMBRE,MAIL,MENSAJE,CONTACTARSE,PREGUNTAS,DUDAS,ESTUDIO CONTABLE E IMPOSITIVO,IMPOSITIVO,CERTIFICACIONES"> 
 
+  <!-- IMPORTAR FAVICON -->
   <link rel="shortcut icon" href="../recursos/favicon-16x16.png" type="image/x-icon">
+
+  <!-- IMPORTAR BOOTSTRAP -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+
+  <!-- IMPORTAR ESTILOS EN CSS -->
   <link rel="stylesheet" href="../css/style.css">
+
+  <!-- IMPORTAR ICONOS DE FONT AWESOME -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
+
   <title>Contacto - Estudio Contable Rodriguez Seguer</title>
 </head>
 
 <body>
+  <div class="content">
+
+  <!-- HEADER Y NAVBAR -->
   <header>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom border-2 fondo-rosa">
+    <nav class="navbar navbar-expand-lg border-bottom fondo-rosa">
       <div class="container-fluid">
         <a class="navbar-brand" href="../index.html"><img src="../recursos/EST.png" width="80px"
             alt="logo estudio"></a>
@@ -29,28 +42,45 @@
           <span class="navbar-toggler-icon"></span>
         </button>
 
-        <div class="collapse navbar-collapse show" id="navbarNavAltMarkup">
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
-            <a class="nav-link text-light" href="./servicios.html">Servicios</a>
-            <a class="nav-link text-light" href="./nosotros.html">Nosotros</a>
-            <a class="nav-link text-light" href="./acceso-clientes.html">Acceso clientes</a>
-            <a class="nav-link text-light" href="./contacto.html">Contactos</a>
+            <a class="nav-link" href="./servicios.html">Servicios</a>
+            <a class="nav-link" href="./nosotros.html">Nosotros</a>
+            <a class="nav-link" href="./acceso-clientes.html">Acceso clientes</a>
+            <a class="nav-link" href="./contacto.html">Contacto</a>
           </div>
         </div>
       </div>
     </nav>
   </header>
 
+  <!-- CONTENIDO PRINCIPAL -->
   <main>
-    <article class="container mt-4">
-      <section>
-        <h1 class="text-center texto-rosa">Estaremos encantados de atenderte</h1>
+    <article class="contacto-container" mt-4">
+
+      <!-- SECCION IZQUIERDA -->
+      <section class="contacto-container__description">
+        <h1 class="mb-3 texto-rosa">Contáctanos</h1>
+        <div>
+          <p>Dirección: Aquino 5491. CP 1439 , Villa Lugano</p>
+        </div>
+        <div>
+          <p>Email: estudiocontablerst@gmail.com.ar</p>
+        </div>
+        <div>
+          <p>Tel: 40612914</p>
+        </div>
+
       </section>
-      <section class=" mb-4">
+
+      <!-- SECCION DERECHA (FORMULARIO) -->
+      <section class="contacto-container__form mb-4">
+        <h5 class="text-center mb-2">Para preguntas generales por favor complete el siguiente formulario:</h5>
+
         <form action="post">
           <div>
             <div class="mb-4">
-              <label for="nameInput" class="form-label">Nombre</label>
+               <label for="nameInput" class="form-label">Nombre</label>
               <input type="text" class="form-control" id="nameInput" placeholder="Nombre">
             </div>
 
@@ -85,21 +115,22 @@
     </article>
   </main>
 
-  <footer class="footer">
-    <div class="footer__infofinal">
-      <p>Servicios Online-Sedes en CABA</p>
-    </div>
+  <!-- FOOTER -->
+  <footer>
     <div class="footer__redes">
-      <p><a href="https://es-la.facebook.com/" class="linkVisited">Facebook</a> - <a href="https://www.instagram.com/"
-          class="linkVisited">Instagram</a> - <a
-          href="https://twitter.com/i/flow/login?input_flow_data=%7B%22requested_variant%22%3A%22eyJsYW5nIjoiZXMifQ%3D%3D%22%7D"
-          class="linkVisited">Twitter</a></p>
+        <p>
+            <a href="https://es-la.facebook.com/" class="linkVisited"><i class="fa-brands fa-facebook social-media-icon"></i></a>
+            <a href="https://www.instagram.com/" class="linkVisited"><i class="fa-brands fa-instagram social-media-icon"></i></a>
+            <a href="https://twitter.com/i/flow/login?input_flow_data=%7B%22requested_variant%22%3A%22eyJsYW5nIjoiZXMifQ%3D%3D%22%7D" class="linkVisited"><i class="fa-brands fa-twitter social-media-icon"></i></a>
+        </p>
     </div>
+  </footer>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
-      crossorigin="anonymous"></script>
-
+  <!-- IMPORTAR ANIMACIONES (AOS) -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
+    crossorigin="anonymous"></script>
+  </div>
 </body>
 
 </html>
