--- a/paginas/nosotros.html
+++ b/paginas/nosotros.html
@@ -5,20 +5,27 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <meta name="description"
-        content="En esta seccion podrás conocer a los integrantes del estudio contable Rodriguez Seguer,tanto a la jefa Graciela Seguer fundadora y contadora pública de la universidad UnLAM como a los empleados">
+    <!-- METAINFORMACION (SEO) -->
+    <meta name="description"content="En esta seccion podrás conocer a los integrantes del estudio contable Rodriguez Seguer,tanto a la jefa Graciela Seguer fundadora y contadora pública de la universidad UnLAM como a los empleados">
+    
     <meta name="keywords" content="STAFF,JEFE,EMPLEADOS,ESTUDIO CONTABLE E IMPOSITIVO,IMPOSITIVO,CERTIFICACIONES">
-
+    <!-- IMPORTAR BOOTSTRAP-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+    <!-- IMPORTAR FAVICON -->
     <link rel="shortcut icon" href="../recursos/favicon-16x16.png" type="image/x-icon">
+    <!-- IMPORTAR CSS -->
     <link rel="stylesheet" href="../css/style.css">
+
+    <!-- ICONOS FONT AWESOME -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
+
     <title>Nosotros - Estudio Contable Rodriguez Seguer</title>
 </head>
 
 <body>
+    <!-- HEADER Y NAVBAR -->
     <header>
         <nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom border-2 fondo-rosa">
             <div class="container-fluid">
@@ -31,21 +38,22 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
 
-                <div class="collapse navbar-collapse show" id="navbarNavAltMarkup">
+                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                     <div class="navbar-nav">
-                        <a class="nav-link text-light" href="./servicios.html">Servicios</a>
-                        <a class="nav-link text-light" href="./nosotros.html">Nosotros</a>
-                        <a class="nav-link text-light" href="./acceso-clientes.html">Acceso clientes</a>
-                        <a class="nav-link text-light" href="./contacto.html">Contactos</a>
+                        <a class="nav-link" href="./servicios.html">Servicios</a>
+                        <a class="nav-link" href="./nosotros.html">Nosotros</a>
+                        <a class="nav-link" href="./acceso-clientes.html">Acceso clientes</a>
+                        <a class="nav-link" href="./contacto.html">Contacto</a>
                     </div>
                 </div>
             </div>
         </nav>
     </header>
     <main>
+        <!--INFORMACION DEL ESTUDIO,JEFA Y STAFF-->
         <section class="quienessomos my-4">
             <article class="quienessomos__todos">
-                <h1 class="text-center mb-4 h1 titulo-rosa nosotros-header"> QUIENES SOMOS?</h1>
+                <h1 class="text-center mb-4 h1 titulo-rosa nosotros-header">QUIÉNES SOMOS?</h1>
 
 
                 <div class="container-fluid">
@@ -63,7 +71,11 @@
                                 Macarena componen el área de inspecciones y requerimientos. Cuento con un grupo de
                                 empleados sumamente eficientes y responsables a la hora de su realizar su trabajo. Todo
                                 mi equipo tiene más de 3 años trabajando conmigo y construyendo este proyecto que soñé
-                                durante muchísimo tiempo.
+                                durante muchísimo tiempo. Como parte de su actualización permanente y atendiendo a las
+                                necesidades globales de las organizaciones, Rodriguez Seguer se encuentra inscripto en
+                                el Consejo Profesional de Ciencias Económicas de la Ciudad Autónoma de Buenos Aires
+                                como en el Consejo Profesional de Ciencias Económicas de Entre Ríos y en Instituciones
+                                Privadas.
                             </p>
                         </div>
                     </div>
@@ -71,19 +83,23 @@
             </article>
         </section>
     </main>
-    <footer class="footer">
-        <div class="footer__infofinal">
-            <p>Servicios Online-Sedes en CABA</p>
-        </div>
+
+    <!-- FOOTER -->
+    <footer class="fixed-bottom">
         <div class="footer__redes">
-            <p><a href="https://es-la.facebook.com/" class="linkVisited">Facebook</a> - <a
-                    href="https://www.instagram.com/" class="linkVisited">Instagram</a> - <a
-                    href="https://twitter.com/i/flow/login?input_flow_data=%7B%22requested_variant%22%3A%22eyJsYW5nIjoiZXMifQ%3D%3D%22%7D"
-                    class="linkVisited">Twitter</a></p>
+            <p>
+                <a href="https://es-la.facebook.com/" class="linkVisited"><i
+                        class="fa-brands fa-facebook social-media-icon"></i></a>
+                <a href="https://www.instagram.com/" class="linkVisited"><i
+                        class="fa-brands fa-instagram social-media-icon"></i></a>
+                <a href="https://twitter.com/i/flow/login?input_flow_data=%7B%22requested_variant%22%3A%22eyJsYW5nIjoiZXMifQ%3D%3D%22%7D"
+                    class="linkVisited"><i class="fa-brands fa-twitter social-media-icon"></i></a>
+            </p>
         </div>
     </footer>
-
+    <!-- IMPORTAR ANIMACIONES (AOS -- JAVASCRIPT) -->
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <!-- INICIALIZAR ANIMACIONES -->
     <script>
         AOS.init();
     </script>
