--- a/paginas/servicios.html
+++ b/paginas/servicios.html
@@ -5,18 +5,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- METAINFORMACION (SEO) -->
+    <meta name="description"content="En esta seccion podrás visualizar  una breve descripción de los servicios que brindamos y nos especializamos al público; Asesoramiento y liquidación de impuestos;Regularización fiscal;Inspecciones y requerimientos">
 
-    <meta name="description" content="En esta seccion podrás visualizar  una breve descripción de los servicios que brindamos y nos especializamos al público; Asesoramiento y liquidación de impuestos;Regularización fiscal;Inspecciones y requerimientos">
-    <meta name="keywords" content="SERVICIOS,ASESORAMIENTO Y LIQUIDACIÓN DE IMPUESTOS,REGULARIZACION FISCAL,INSPECCION Y REQUERIMIENTOS,AGIP,AFIP,ARBA,IMPUESTOS,ESTUDIO CONTABLE E IMPOSITIVO,IMPOSITIVO,CERTIFICACIONES">
-
+    <meta name="keywords"content="SERVICIOS,ASESORAMIENTO Y LIQUIDACIÓN DE IMPUESTOS,REGULARIZACION FISCAL,INSPECCION Y REQUERIMIENTOS,AGIP,AFIP,ARBA,IMPUESTOS,ESTUDIO CONTABLE E IMPOSITIVO,IMPOSITIVO,CERTIFICACIONES">
+    <!-- IMPORTAR FAVICON -->
     <link rel="shortcut icon" href="../recursos/favicon-16x16.png" type="image/x-icon">
+    <!-- IMPORTAE BOOTSTRAP -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+    <!-- IMPORTAR CSS -->
     <link rel="stylesheet" href="../css/style.css">
+    <!-- ICONOS FONT AWESOME -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
+
     <title>Servicios - Estudio Contable Rodriguez Seguer</title>
 </head>
 
 <body>
+    <!-- HEADER Y NAVBAR -->
     <header>
         <nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom border-2 fondo-rosa">
             <div class="container-fluid">
@@ -30,18 +37,19 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
 
-                <div class="collapse navbar-collapse show" id="navbarNavAltMarkup">
+                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                     <div class="navbar-nav">
-                        <a class="nav-link text-light" href="./servicios.html">Servicios</a>
-                        <a class="nav-link text-light" href="./nosotros.html">Nosotros</a>
-                        <a class="nav-link text-light" href="./acceso-clientes.html">Acceso clientes</a>
-                        <a class="nav-link text-light" href="./contacto.html">Contactos</a>
+                        <a class="nav-link" href="./servicios.html">Servicios</a>
+                        <a class="nav-link" href="./nosotros.html">Nosotros</a>
+                        <a class="nav-link" href="./acceso-clientes.html">Acceso clientes</a>
+                        <a class="nav-link" href="./contacto.html">Contacto</a>
                     </div>
                 </div>
             </div>
         </nav>
     </header>
     <main>
+        <!-- SERVICIOS -->
         <header class="servicios__header">
             <h1>SERVICIOS DISPONIBLES</h1>
         </header>
@@ -75,18 +83,20 @@
             </article>
         </section>
     </main>
-    <footer>
-        <div class="footer__infofinal">
-            <p>Servicios Online-Sedes en CABA</p>
-        </div>
+    <footer class="fixed-bottom">
+        <!-- FOOTER -->
         <div class="footer__redes">
-            <p><a href="https://es-la.facebook.com/" class="linkVisited">Facebook</a> - <a
-                    href="https://www.instagram.com/" class="linkVisited">Instagram</a> - <a
-                    href="https://twitter.com/i/flow/login?input_flow_data=%7B%22requested_variant%22%3A%22eyJsYW5nIjoiZXMifQ%3D%3D%22%7D"
-                    class="linkVisited">Twitter</a></p>
+            <p>
+                <a href="https://es-la.facebook.com/" class="linkVisited"><i
+                        class="fa-brands fa-facebook social-media-icon"></i></a>
+                <a href="https://www.instagram.com/" class="linkVisited"><i
+                        class="fa-brands fa-instagram social-media-icon"></i></a>
+                <a href="https://twitter.com/i/flow/login?input_flow_data=%7B%22requested_variant%22%3A%22eyJsYW5nIjoiZXMifQ%3D%3D%22%7D"
+                    class="linkVisited"><i class="fa-brands fa-twitter social-media-icon"></i></a>
+            </p>
         </div>
     </footer>
-
+    <!-- BOOTSTRAP-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
         crossorigin="anonymous"></script>
